changes in play-store button

--- a/src/css/ComponentSearchThree.css
+++ b/src/css/ComponentSearchThree.css
@@ -68,3 +68,14 @@ button {
   color: #fff;
   margin-right: 10px;
 }
+
+@media screen and (min-height:1080px){
+  .play-store {
+    top: 630px;
+  }
+} 
+
+
+
+
+
